<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    tools:context=".vista.Inicio"
    android:background="@drawable/fondo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.7">
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_car_white">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="30sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/title2"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.4"
                android:text="@string/subTitle"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold">
            </TextView>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp">
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailTitle"
                android:textStyle="bold">
            </TextView>

            <EditText
                android:id="@+id/editText_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"></EditText>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp">
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordTitle"
                android:textStyle="bold">
            </TextView>

            <EditText
                android:id="@+id/editText_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"></EditText>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox_Remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:alpha="1"
                    android:text="@string/textCheck"></CheckBox>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/passwordRememberTitle">
                </TextView>
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp">
            </View>

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginButton"></Button>

            <Button
                android:id="@+id/btn_registrarInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerButton"></Button>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp">
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loginButtonSocial">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/facebook">
                </ImageView>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/google">
                </ImageView>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/twitter">
                </ImageView>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>