<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:clipToPadding="true"
    tools:context=".vista.Panel">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/black"></RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_car_white">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcome_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:gravity="center"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/titleWelcome"
                android:textColor="@color/white"
                android:textSize="32sp"></TextView>

            <TextView
                android:id="@+id/textViewNombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Nombre de usuario"
                android:textColor="@color/white"
                android:textSize="30sp">

            </TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_name"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:paddingLeft="20dp"
            android:text="Tus datos son:"
            android:textColor="@color/white"
            android:textSize="32sp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="20dp"
                    android:text="@string/cedula"
                    android:textColor="@color/white"
                    android:textSize="28sp">
                </TextView>

                <TextView
                    android:id="@+id/textViewIdentificacionUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:text="1234567890"
                    android:textColor="@color/white"
                    android:textSize="28sp">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="20dp"
                    android:text="@string/ciudad"
                    android:textColor="@color/white"
                    android:textSize="28sp">
                </TextView>

                <TextView
                    android:id="@+id/textViewCiudadUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:text="Ciudad"
                    android:textColor="@color/white"
                    android:textSize="28sp">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="20dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="28sp">
                </TextView>

                <TextView
                    android:id="@+id/textViewCorreoUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:text="Correo electronico"
                    android:textColor="@color/white"
                    android:textSize="28sp">
                </TextView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logoutButton"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"></Button>

</RelativeLayout>