<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:clipToPadding="true"
    tools:context=".vista.Registro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/black"></RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="-10dp"
        android:background="@color/white"
        app:cardCornerRadius="30sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="@string/registro"
                android:textColor="@color/black"
                android:textSize="30sp"></TextView>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textStyle="bold"></TextView>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="0dp"
                        android:background="@drawable/icon_edit"></ImageView>

                    <EditText
                        android:id="@+id/name_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"></EditText>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido"
                    android:textStyle="bold"></TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="0dp"
                        android:background="@drawable/icon_edit"></ImageView>

                    <EditText
                        android:id="@+id/lastname_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"></EditText>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cedula"
                    android:textStyle="bold"></TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="0dp"
                        android:background="@drawable/icon_id"></ImageView>

                    <EditText
                        android:id="@+id/identifier_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"></EditText>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ciudad"
                    android:textStyle="bold"></TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/icon_city"></ImageView>

                    <EditText
                        android:id="@+id/city_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"></EditText>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"></TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="0dp"
                        android:background="@drawable/icon_email"></ImageView>

                    <EditText
                        android:id="@+id/email_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"></EditText>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contrasena"
                    android:textStyle="bold"></TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="0dp"
                        android:background="@drawable/icon_password"></ImageView>

                    <EditText
                        android:id="@+id/password_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"></EditText>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar"></Button>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>